--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-src/main/resources/application-dev.properties
-src/main/resources/application-dev.yml
+application-dev.properties
+application-dev.yml
 
 ### STS ###
 .apt_generated
