--- a/transaction-service/Dockerfile
+++ b/transaction-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17-jdk-slim
 WORKDIR /app
-COPY target/transaction-service.jar app.jar
+COPY target/transaction-service-*-SNAPSHOT.jar app.jar
 EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "app.jar"]
