set up spring actuator

--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -9,3 +9,14 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+        
+logging:
+  level:
+    com.netflix.eureka: INFO
+    org.springframework: INFO
