--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,15 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - auth-service
-      - transaction-service
+      - discovery-service
+    networks:
+      - app-network
+
+  discovery-service:
+    build: ./discovery-service
+    container_name: discovery-service
+    ports:
+      - "8761:8761"
     networks:
       - app-network
 
