--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -8,11 +8,11 @@ spring:
     gateway:
       routes:
         - id: auth-service
-          uri: http://auth-service:8082
+          uri: lb://auth-service
           predicates:
             - Path=/auth/**
         - id: transaction-service
-          uri: http://transaction-service:8081
+          uri: lb://transaction-service
           predicates:
               - Path=/transactions/**
 eureka:
