--- a/transaction-service/Dockerfile
+++ b/transaction-service/Dockerfile
@@ -1,5 +1,10 @@
+FROM maven:3.9.3-eclipse-temurin-17 AS builder
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
 FROM openjdk:17-jdk-slim
 WORKDIR /app
-COPY target/transaction-service-*-SNAPSHOT.jar app.jar
+COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "app.jar"]
